CHCLibSys

---------------------------------------------------------------------
03a.05
  Add to repository (alpha not complete)
---------------------------------------------------------------------

---------------------------------------------------------------------
Known problems:
---------------------------------------------------------------------
To add/improve:
---------------------------------------------------------------------
Future extensions:
---------------------------------------------------------------------