@@ -1,5 +1,5 @@
 /**
- * 
+ *
  */
 package cx.ath.choisnet.system;
 
@@ -16,7 +16,8 @@ import cx.ath.choisnet.system.impl.win32.EnvArcRegWin32ReadWrite;
  * @author Claude CHOISNET
  *
  */
-public final class EnvArcManager 
+@Deprecated
+public final class EnvArcManager
 {
     private static EnvArc defaultEnvArc = new EnvArcDefaultImpl();
     private static EnvArc currentEnvArc;
@@ -25,19 +26,19 @@ public final class EnvArcManager
     static {
         // Add native implementation
         addEnvArcEntry( defaultEnvArc );
-   
+
         perfomeInit();
     }
-    
+
     private EnvArcManager()
     {//All static
-    } 
+    }
 
     private static void perfomeInit()
     {
         // TODO: 1. identify operating system
         // TODO: 2. load EnvArc implementation(s?) (using reflexion)
-        
+
         try {
             EnvArcRegWin32ReadOnly envArcRegWin32 = new EnvArcRegWin32ReadOnly();
             addEnvArcEntry( envArcRegWin32 );
@@ -45,46 +46,50 @@ public final class EnvArcManager
         }
         catch( EnvArcRegWin32EnvArcException notSupported ) {
         }
-        
+
         try {
             addEnvArcEntry( new EnvArcRegWin32ReadWrite() );
         }
         catch( EnvArcRegWin32EnvArcException notSupported ) {
         }
-         
+
         // Initialize current (if not yet done)
         if( currentEnvArc == null ) {
             currentEnvArc = defaultEnvArc;
         }
     }
-    
+
+    @Deprecated
     private static void addEnvArcEntry(EnvArc anEnvArc)
     {
         addEnvArcEntry( anEnvArc.getClass().getName(), anEnvArc );
     }
 
+    @Deprecated
     private static void addEnvArcEntry(String name, EnvArc anEnvArc)
     {
         if( envArcMap.get( name ) != null ) {
             throw new EnvArcAllReadyDefineException(name);
         }
-        
+
         envArcMap.put( anEnvArc.getClass().getName(), anEnvArc );
     }
 
+    @Deprecated
     public static EnvArc getDefaultEnvArc()
     {
         return defaultEnvArc;
     }
-    
+
     /**
      * @return Current EnvArc
      */
+    @Deprecated
     public static EnvArc getEnvArc()
     {
         return currentEnvArc;
     }
-    
+
     /**
      * Set Current EnvArc
      * @param name EnvArc name to set
@@ -93,15 +98,15 @@ public final class EnvArcManager
     public static boolean setEnvArc(String name)
     {
         EnvArc envArc = envArcMap.get( name );
-        
+
         if( envArc != null ) {
             currentEnvArc = envArc;
             return true;
         }
-        
+
         return false;
     }
-    
+
     public static Collection<String> getEnvArcNames()
     {
         return Collections.unmodifiableCollection( envArcMap.keySet() );
