@@ -1,6 +1,9 @@
 CHCLibSys
 
 ---------------------------------------------------------------------
+03a.06
+  Deprecated cx.ath.choisnet.system.EnvArc and related classes
+---------------------------------------------------------------------
 03a.05
   Add to repository (alpha not complete)
 ---------------------------------------------------------------------
